[community] feat : Board URL View Edit & Init Data Setting