@@ -1,30 +1,27 @@
 package com.hometalk.onepass.community.service;
 
-import com.hometalk.onepass.community.dto.PostCreateRequest;
+import com.hometalk.onepass.community.dto.PostRequestDTO;
 import com.hometalk.onepass.community.dto.PostListResponse;
-import com.hometalk.onepass.community.dto.PostUpdateRequest;
 import com.hometalk.onepass.community.entity.Category;
 import com.hometalk.onepass.community.entity.Post;
 import com.hometalk.onepass.community.repository.CategoryRepository;
 import com.hometalk.onepass.community.repository.PostRepository;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
+@Transactional(readOnly = true)
 public class PostService {
     private final PostRepository postRepository;
     private final CategoryRepository categoryRepository;
 
     // Create
-    public Long postSave(PostCreateRequest dto) {
+    @Transactional
+    public Long postSave(PostRequestDTO dto) {
         Category category = categoryRepository.findById(dto.getCategoryId()).orElseThrow(() ->
                     new IllegalArgumentException("해당 카테고리가 존재하지 않습니다." + dto.getCategoryId()));
         Post post = dto.toEntity(category);
@@ -32,10 +29,17 @@ public class PostService {
     }
 
     // Read
-    public List<PostListResponse> postList(Long boardId, Long categoryId) {
-        // 최신순 정렬
-        List<Post> posts = postRepository.findAll(Sort.by(Sort.Direction.DESC, "id"));
-        return posts.stream().map(PostListResponse::new).collect(Collectors.toList());
+    public List<PostListResponse> postList(Long boardId, Long categoryId, int page) {
+        List<Post> posts;
+        if (categoryId == null) {
+            // 게시판 전체 조회 (최신순)
+            posts = postRepository.findAllByBoard_IdOrderByIdDesc(boardId);
+        } else {
+            // 특정 카테고리 조회 (최신순)
+            posts = postRepository.findAllByBoard_IdAndCategory_IdOrderByIdDesc(boardId, categoryId);
+        }
+
+        return posts.stream().map(PostListResponse::new).toList();
     }
 /*  필터링
 
@@ -65,7 +69,8 @@ public class PostService {
     }
 
     // Update
-    public void postUpdate(Long id, PostUpdateRequest dto) {
+    @Transactional
+    public void postUpdate(Long id, PostRequestDTO dto) {
         Post post = postRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("게시글이 없습니다."));
         post.update(dto);
     }
